Done with modifying all files. It should work now...

--- a/triangle/makefile
+++ b/triangle/makefile
@@ -1,7 +1,7 @@
 
 CC=g++
-OBJS=	read_nodes.o read_edges.o read_elements.o compute_topology.o vector_operations.o geometric.o \
-	write_gnuplot.o write_polyfile.o
+OBJS =	new_mesh.o read_nodes.o read_edges.o read_elements.o compute_topology.o vector_operations.o geometric.o \
+	submesh.o plot_mesh.o write_polyfile.o 
 
 # Two outputs: 
 # 1. text.exe is for a test run of "triangle"; 
@@ -17,31 +17,8 @@ mesh_lib.o: $(OBJS)
 
 
 # compile each .cpp source file seperately
-test_mesh.o: test_mesh.cpp
-	$(CC) -c test_mesh.cpp -o test_mesh.o
-
-
-read_nodes.o: read_nodes.cpp mesh.hpp
-	$(CC) -c read_nodes.cpp -o read_nodes.o
-
-read_edges.o: read_edges.cpp mesh.hpp
-	$(CC) -c read_edges.cpp -o read_edges.o
-
-read_elements.o: read_elements.cpp mesh.hpp
-	$(CC) -c read_elements.cpp -o read_elements.o
-
-compute_topology.o: compute_topology.cpp  mesh.hpp
-	$(CC) -c compute_topology.cpp -o compute_topology.o
-
-vector_operations.o: vector_operations.cpp mesh.hpp
-	$(CC) -c vector_operations.cpp -o vector_operations.o
-
-geometric.o: geometric.cpp mesh.hpp
-	$(CC) -c geometric.cpp -o geometric.o
-write_gnuplot.o: write_gnuplot.cpp mesh.hpp
-	$(CC) -c write_gnuplot.cpp -o write_gnuplot.o
-write_polyfile.o: write_polyfile.cpp mesh.hpp
-	$(CC) -c write_polyfile.cpp -o $@
+%.o: %.cpp mesh.hpp
+	$(CC) -c $<
 
 
 clean_objs:
@@ -49,6 +26,6 @@ clean_objs:
 clean_exe:
 	mv *.exe $(HOME)/.local/share/Trash/files/
 clean_data:
-	mv *.1.* *.dat *.gnuplot *.png *.txt $(HOME)/.local/share/Trash/files/
+	mv *.node *.edge *.ele *.poly *.dat *.gnuplot *.png *.txt $(HOME)/.local/share/Trash/files/
 complete_clean:
 	make clean_objs clean_exe clean_data
