Move test files for "fem_assemble" to a subfolder. Modified "fem_assemble.hpp" and makefile correspondingly.

--- a/fem_assemble/makefile
+++ b/fem_assemble/makefile
@@ -1,10 +1,18 @@
 TrashDIR = /home/xiaoxian/.local/share/Trash/files/
+CFLAGS = -larmadillo 
+
+all: fem_assemble_lib.o
+
+fem_assemble_lib.o: fem_assemble
+	ld -r *.o -o $@
+	make partial_clean
+
+fem_assemble : *.cpp fem_assemble.hpp
+	g++ -c $(CFLAGS) *.cpp 
 
 
-clean_data:
-	- mv *.poly *.ele *.node *.edge *.png *.gnuplot $(TrashDIR)
-clean_obj:
-	- mv *.o $(TrashDIR)
-clean_complete:
-	make clean_data
-	make clean_obj
+partial_clean:
+	-mv matrix*.o $(TrashDIR)
+clean:
+	-mv *.o $(TrashDIR)
+
