Added 2 files 1. boundary_conditions.cpp 2. plotting.cpp **Modified related files **Folder runs w/t problems

--- a/single_geometry/makefile
+++ b/single_geometry/makefile
@@ -2,21 +2,36 @@
 CC=g++
 OBJS = main.o generate_mesh.o
 TrashDIR = /home/xiaoxian/.local/share/Trash/files/
+LOCAL_HPP = exciton_single_geometry.hpp
+CFLAGS = -larmadillo
 
 all: main.exe
 
-main.exe: fem_assemble.o mesh_lib.o generate_mesh.o functions.o main.o
-	g++ *.o -o main.exe
+main.exe: 	fem_assemble.o mesh_lib.o \
+		generate_mesh.o functions.o boundary_conditions.o plotting.o \
+		main.o
+	g++ *.o -o main.exe $(CFLAGS)
 	make clean_objs
 
-main.o: main.cpp exciton_single_geometry.hpp
+
+
+generate_mesh.o: generate_mesh.cpp $(LOCAL_HPP)
 	g++ -c $<
 
 functions.o: functions.cpp
 	g++ -c $<
 
-generate_mesh.o: generate_mesh.cpp exciton_single_geometry.hpp
+boundary_conditions.o: boundary_conditions.cpp $(LOCAL_HPP)
 	g++ -c $<
+
+plotting.o: plotting.cpp $(LOCAL_HPP)
+	g++ -c $<
+
+main.o: main.cpp exciton_single_geometry.hpp
+	g++ -c $<
+
+
+
 
 fem_assemble.o: ../fem_assemble/*.cpp
 	g++ -c ../fem_assemble/*.cpp
