Add a function arma::vec interpolateFunction(mesh, double (*f)(double, double))

--- a/fem_assemble/makefile
+++ b/fem_assemble/makefile
@@ -1,11 +1,10 @@
 TrashDIR = /home/xiaoxian/.local/share/Trash/files/
 CFLAGS = -larmadillo 
 
-all: fem_assemble_lib.o
+all: fem_assemble
 
-fem_assemble_lib.o: fem_assemble
-	ld -r *.o -o $@
-	make partial_clean
+#fem_assemble_lib.o: fem_assemble
+#	ld -r *.o -o $@
 
 fem_assemble : *.cpp fem_assemble.hpp
 	g++ -c $(CFLAGS) *.cpp 
