--- a/exciton_cos_interface/makefile
+++ b/exciton_cos_interface/makefile
@@ -1,25 +1,48 @@
 TrashDIR = /home/xiaoxian/.local/share/Trash/files/
-CFLAGS = -lm
+CFLAGS = -lm -larmadillo
 LOCAL_HPP = exciton_cos_interface.hpp
 
+
+
+##### Linking everything
 all: main.exe
 
-main.exe: 	mesh_libs \
-		generate_mesh.o main.o
-	g++ *.o -o $@
-	make clean_objs
+main.exe: 	mesh_libs fem_assemble\
+		generate_mesh.o interface_curvature.o state_eq.o adjoint_eq.o plotting.o main.o
+	g++ *.o -o $@ $(CFLAGS)
+quick_build.o: 	
+	g++ *.o -o main.exe $(CFLAGS)
 
 
 
+
+
+##### Compile each individual module
 main.o: main.cpp $(LOCAL_HPP)
 	g++ -c main.cpp
 
+# mesh
 generate_mesh.o: generate_mesh.cpp $(LOCAL_HPP)
 	g++ -c generate_mesh.cpp $(CFLAGS)
+interface_curvatures.o: interface_curvature.cpp
+	g++ -c interface_curvature.cpp $(CFLAGS)
+# state equation
+state_eq.o: state_eq.cpp $(LOCAL_HPP)
+	g++ -c state_eq.cpp $(CFLAGS)
+# adjoint equation
+adjoint_eq.o: adjoint_eq.cpp $(LOCAL_HPP)
+	g++ -c adjoint_eq.cpp $(CFLAGS)
+
+plotting.o: plotting.cpp $(LOCAL_HPP)
+	g++ -c plotting.cpp $(CFLAGS)
 
 
 
 
+
+##### Files from other folder
+fem_assemble: ../fem_assemble/*.cpp
+	g++ -c ../fem_assemble/*.cpp
 mesh_libs: ../triangle/*.cpp
 	g++ -c ../triangle/*.cpp
 
