* Add attribute "refinement_markers" to "struct MeshData" * Add "*.a" to ".gitignore" * Modified "test/makefile" so that object files are 	archived into ".a" file * Writing "refine_mesh.cpp" (not done yet)

--- a/triangle/test/makefile
+++ b/triangle/test/makefile
@@ -2,15 +2,17 @@ TrashDIR = /home/xiaoxian/.local/share/Trash/files/
 
 all: test.exe
 
-test.exe: mesh_lib test.o
-	g++ *.o -o $@
-	make clean_objs
+test.exe: mesh_lib.a test.o
+	g++ *.o *.a -o $@
+#	make clean_objs
 
 test.o: test_mesh.cpp
 	g++ -c test_mesh.cpp
 
-mesh_lib: ../*.cpp
-	g++ -c ../*.cpp 
+mesh_lib.a: ../*.cpp
+	g++ -c $^
+	ar cr $@ *.o
+	make clean_objs
 
 
 
@@ -18,9 +20,12 @@ clean_data:
 	- mv *.poly *.ele *.node *.edge *.png *.gnuplot *.dat *.txt $(TrashDIR)
 clean_objs:
 	- mv *.o $(TrashDIR)
+clean_libs:
+	- mv *.a $(TrashDIR)
 clean_exe:
 	- mv *.exe $(TrashDIR)
-complete_clean:
+clean:
 	make clean_data
 	make clean_objs
+	make clean_libs
 	make clean_exe
