--- a/exciton_cos_interface/makefile
+++ b/exciton_cos_interface/makefile
@@ -8,19 +8,19 @@ LOCAL_HPP = misc.hpp
 ##### Linking everything
 all: main.exe
 
-main.exe: 	mesh_libs fem_assemble\
+main.exe: 	mesh_libs.a fem_assemble.a\
 		generate_mesh.o misc.o functionals.o\
 		state_eq.o adjoint_eq.o shape_gradient.o plotting.o main.o
-	g++ *.o -o $@ $(CFLAGS)
+	g++ *.o *.a -o $@ $(CFLAGS)
 
 quick_build: 	
-	g++ *.o -o main.exe $(CFLAGS)
+	g++ *.o *.a -o main.exe $(CFLAGS)
 
 
 
 
 
-##### Compile each individual module
+##### Compile each individual module within this folder
 main.o: main.cpp $(MAIN_HPP)
 	g++ -c main.cpp
 
@@ -56,10 +56,15 @@ plotting.o: plotting.cpp $(MAIN_HPP)
 
 
 ##### Files from other folder
-fem_assemble: ../fem_assemble/*.cpp
+fem_assemble.a: ../fem_assemble/*.cpp
 	g++ -c ../fem_assemble/*.cpp
-mesh_libs: ../triangle/*.cpp
+	ar cr $@ *.o
+	make clean_objs
+
+mesh_libs.a: ../triangle/*.cpp
 	g++ -c ../triangle/*.cpp
+	ar cr $@ *.o
+	make clean_objs
 
 
 
@@ -70,9 +75,11 @@ clean_data:
 
 clean_objs:
 	- mv *.o $(TrashDIR)
+clean_libs:
+	- mv *.a $(TrashDIR)
 
 clean_exe:
 	- mv *.exe $(TrashDIR)
 
-complete_clean:
-	make clean_data clean_objs clean_exe
+clean:
+	make clean_data clean_objs clean_libs clean_exe
