* Correct error in assembling "rhs vector" in   "state_eq.cpp"

--- a/exciton_cos_interface/makefile
+++ b/exciton_cos_interface/makefile
@@ -8,52 +8,12 @@ LOCAL_HPP = misc.hpp
 ##### Linking everything
 all: main.exe
 
-main.exe: 	mesh_libs.a fem_assemble.a\
-		generate_mesh.o misc.o functionals.o\
-		state_eq.o adjoint_eq.o shape_gradient.o plotting.o main.o
+main.exe: 	mesh_lib.a fem_assemble.a local_objs
 	g++ *.o *.a -o $@ $(CFLAGS)
 
-quick_build: 	
-	g++ *.o *.a -o main.exe $(CFLAGS)
 
-
-
-
-
-##### Compile each individual module within this folder
-main.o: main.cpp $(MAIN_HPP)
-	g++ -c main.cpp
-
-# mesh
-generate_mesh.o: generate_mesh.cpp $(MAIN_HPP)
-	g++ -c generate_mesh.cpp $(CFLAGS)
-
-
-# functions to be called by other programs
-misc.o:	misc.cpp misc.hpp
-	g++ -c misc.cpp
-
-
-# state equation
-state_eq.o: state_eq.cpp $(MAIN_HPP) $(LOCAL_HPP)
-	g++ -c state_eq.cpp $(CFLAGS)
-# adjoint equation
-adjoint_eq.o: adjoint_eq.cpp $(MAIN_HPP) $(LOCAL_HPP)
-	g++ -c adjoint_eq.cpp $(CFLAGS)
-
-# shape gradient
-shape_gradient.o: shape_gradient.cpp $(MAIN_HPP) $(LOCAL_HPP)
-	g++ -c shape_gradient.cpp $(CFLAGS)
-
-functionals.o: functionals.cpp $(LOCAL_HPP)
-	g++ -c functionals.cpp
-
-# plotting
-plotting.o: plotting.cpp $(MAIN_HPP)
-	g++ -c plotting.cpp $(CFLAGS)
-
-
-
+local_objs: *.cpp *.hpp
+	g++ -c *.cpp $(CFLAGS)
 
 ##### Files from other folder
 fem_assemble.a: ../fem_assemble/*.cpp
@@ -61,7 +21,7 @@ fem_assemble.a: ../fem_assemble/*.cpp
 	ar cr $@ *.o
 	make clean_objs
 
-mesh_libs.a: ../triangle/*.cpp
+mesh_lib.a: ../triangle/*.cpp
 	g++ -c ../triangle/*.cpp
 	ar cr $@ *.o
 	make clean_objs
