--- a/fem_assemble/test/makefile
+++ b/fem_assemble/test/makefile
@@ -3,27 +3,33 @@ CFLAGS = -larmadillo
 
 all: test.exe
 
-test.exe: mesh_lib.o fem_assemble.o test.o
-	g++ *.o -o test.exe $(CFLAGS)
-	make clean_objs
+test.exe: mesh_lib.a fem_assemble.a test.o
+	g++ *.o *.a -o test.exe $(CFLAGS)
+
 
 test.o: test.cpp
 	g++ -c test.cpp $(CFLAGS)
 
-fem_assemble.o: ../*.cpp
+fem_assemble.a: ../*.cpp
 	g++ -c ../*.cpp $(CFLAGS)
+	ar cr $@ *.o
+	make clean_objs
 
-mesh_lib.o: ../../triangle/*.cpp
+mesh_lib.a: ../../triangle/*.cpp
 	g++ -c ../../triangle/*.cpp
-
+	ar cr $@ *.o
+	make clean_objs
 
 clean_data:
 	-mv *.poly *.ele *.node *.edge *.png *.gnuplot *.dat $(TrashDIR)
 clean_objs:
 	-mv *.o $(TrashDIR)
+clean_libs:
+	-mv *.a $(TrashDIR)
 clean_exe:
 	-mv *.exe $(TrashDIR)
-complete_clean:
+clean:
 	make clean_data
 	make clean_objs
+	make clean_libs
 	make clean_exe
