--- a/inorganic_DD/makefile
+++ b/inorganic_DD/makefile
@@ -4,14 +4,14 @@ CFLAGS = -larmadillo
 
 all: main.exe
 
-main.exe: mesh_libs.a fem_assemble.a local_objs
+main.exe: mesh_libs.a fem_lib.a local_objs
 	g++ *.o *.a -o $@ $(CFLAGS)
 
 local_objs: *.cpp *.hpp
 	g++ -c *.cpp $(CFLAGS)
 
 
-fem_assemble.a: ../fem_assemble/*.cpp
+fem_lib.a: ../my_fem/*.cpp
 	g++ -c $^ $(CFLAGS)
 	ar cr $@ *.o
 	make clean_objs
