* Added functions that plot armadillo vector on Dirichlet   boundaries * Added "test/" to test the plotting functions

--- a/gnuplot/makefile
+++ b/gnuplot/makefile
@@ -2,15 +2,19 @@
 TrashDir = /home/xiaoxian/.local/share/Trash/files/
 
 
-all : gnuplot_libs
+all : gnuplot_lib.a
 
-gnuplot_libs: *.cpp
+gnuplot_lib.a: *.cpp my_gnuplot.hpp
 	g++ -c $^
+	ar -cr $@ *.o
 
 
 
 clean_objs:
 	- mv *.o $(TrashDir)
+clean_libs:
+	- mv *.a $(TrashDir)
 
 clean:
 	make clean_objs
+	make clean_libs
