In the process of moving local files to a subdirectory

--- a/organic_DD/makefile
+++ b/organic_DD/makefile
@@ -6,14 +6,18 @@ CFLAGS = -lm -larmadillo
 ##### Linking everything
 all: main.exe
 
-main.exe: 	mesh_lib.a fem_lib.a gnuplot_lib.a \
-		local_objs
-	g++ *.o *.a -o $@ $(CFLAGS)
+main.exe: 	mesh_lib.a fem_lib.a gnuplot_lib.a local_objs.a\
+		main.cpp
+	g++ main.cpp -c
+	g++ main.o *.a -o $@ $(CFLAGS)
+#	make clean_objs
 
 
-local_objs: *.cpp
+##### Files from local folder
+local_objs.a: local_cpps/*.cpp
 	g++ -c $^
-
+	ar cr $@ *.o
+	make clean_objs
 
 ##### Files from other folder
 gnuplot_lib.a: ../gnuplot/*.cpp
